Fix Show/hide filetree button on small displays
the gt-df's display:flex !important did override the display:none on small displays

--- a/web_src/css/repo.css
+++ b/web_src/css/repo.css
@@ -2759,6 +2759,7 @@ tbody.commit-list {
   border: none;
   user-select: none;
   color: inherit;
+  display: flex !important;
 }
 
 .diff-toggle-file-tree-button:hover {
